# HytaleVRInjector-mod

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  hytalevr.vrmanifest  hytalevr_actions.json  hytalevr_bindings_holographic_controller.json  hytalevr_bindings_hpmotioncontroller.json  hytalevr_bindings_knuckles.json  hytalevr_bindings_oculus_touch.json  hytalevr_bindings_vive_controller.json  hytalevr_bindings_vive_cosmos_controller.json
assets/vr_hands/: left_hand.mtl
src/: dashboard.cpp  dashboard_key_bindings.h  dashboard_update_logic.h  dashboard_updater.cpp  dashboard_updater.h  noesis_probe.cpp  noesis_probe_shared.h  noesis_probe_tool.cpp  player_teleporter.cpp  probe.cpp  shared.h  ui_scale_shared.h  ui_scene_depth_policy.h  viewtarget_writer.cpp  vr_camera_hook.cpp  vr_camera_shared.h  vr_hand_depth.h  vr_held_item.h  vr_hook_smoketest.cpp  vr_hook_validation.h  vr_item_assets.cpp  vr_item_assets.h  vr_locomotion.h  vr_math.h  vr_physical_interactions.h  vr_render_resolution.h
src/ui_scale_hook/: CMakeLists.txt  main.cpp
tests/: dashboard_update_tests.cpp  validate_vr_bindings.cmake  vr_item_assets_smoketest.cpp  vr_item_live_diagnostic.cpp  vr_math_tests.cpp
